--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta name="description" content="Rolling Sky GeoBuffer Generator – a free web tool to generate geoBuffer files from Rolling Sky level.txt files. Supports rollers, lasers, stompers, and more." />
+<meta name="keywords" content="Rolling Sky, GeoBuffer, RS Editor, Rolling Sky level editor, geoBuffer generator, Rolling Sky tools" />
+<meta name="author" content="RibTruper" />
 <title>Rolling Sky GeoBuffer Generator (Tool)</title>
 <style>
   body{font-family:Inter,Arial,Helvetica,sans-serif;background:#f3f4f6;padding:20px}
@@ -386,3 +389,4 @@ togglePreviewBtn.addEventListener('click', () => {
 </script>
 </body>
 </html>
+
