--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <meta name="description" content="Rolling Sky GeoBuffer Generator – a free web tool to generate geoBuffer files from Rolling Sky level.txt files. Supports rollers, lasers, stompers, and more." />
 <meta name="keywords" content="Rolling Sky, GeoBuffer, RS Editor, Rolling Sky level editor, geoBuffer generator, Rolling Sky tools" />
+<meta name="google-site-verification" content="F-8NQho_wn--hy6umNfzMSTMLaiUZEePvk7XiByaxiM" />
 <meta name="author" content="RibTruper" />
 <title>Rolling Sky GeoBuffer Generator (Tool)</title>
 <style>
@@ -389,4 +390,5 @@ togglePreviewBtn.addEventListener('click', () => {
 </script>
 </body>
 </html>
+
 
