--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <meta name="description" content="Rolling Sky GeoBuffer Generator – a free web tool to generate geoBuffer files from Rolling Sky level.txt files. Supports rollers, lasers, stompers, and more." />
-<meta name="keywords" content="Rolling Sky, GeoBuffer, RS Editor, Rolling Sky level editor, geoBuffer generator, Rolling Sky tools" />
+<meta name="keywords" content="Rolling Sky, GeoBuffer, RS Editor, Rolling Sky level editor, geoBuffer generator, Rolling Sky tools, rolling sky geobuffer generator, rolling sky geobuffer" />
 <meta name="google-site-verification" content="F-8NQho_wn--hy6umNfzMSTMLaiUZEePvk7XiByaxiM" />
 <meta name="author" content="RibTruper" />
+<link rel="icon" href="/favicon.ico">
 <title>Rolling Sky GeoBuffer Generator (Tool)</title>
 <style>
   body{font-family:Inter,Arial,Helvetica,sans-serif;background:#f3f4f6;padding:20px}
@@ -390,5 +391,6 @@ togglePreviewBtn.addEventListener('click', () => {
 </script>
 </body>
 </html>
+
 
 
