--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="keywords" content="Rolling Sky, GeoBuffer, RS Editor, Rolling Sky level editor, geoBuffer generator, Rolling Sky tools, rolling sky geobuffer generator, rolling sky geobuffer" />
 <meta name="google-site-verification" content="F-8NQho_wn--hy6umNfzMSTMLaiUZEePvk7XiByaxiM" />
 <meta name="author" content="RibTruper" />
-<link rel="icon" href="/favicon.ico">
+<link rel="icon" href="favicon.ico">
 <title>Rolling Sky GeoBuffer Generator (Tool)</title>
 <style>
   body{font-family:Inter,Arial,Helvetica,sans-serif;background:#f3f4f6;padding:20px}
@@ -391,6 +391,7 @@ togglePreviewBtn.addEventListener('click', () => {
 </script>
 </body>
 </html>
+
 
 
 
