--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <div id="status" class="status hidden"></div>
   <hr>
   <h3 style="margin-top:20px">Preview</h3>
-  <p class="small">It can only be load when downloaded the geoBuffer file.</p>
+  <p class="small">It will load a preview of the file</p>
   <pre id="preview" class="hidden"></pre>
 </div>
 
@@ -391,6 +391,7 @@ togglePreviewBtn.addEventListener('click', () => {
 </script>
 </body>
 </html>
+
 
 
 
