Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="description" content="Rolling Sky GeoBuffer Generator - a tool to generate geoBuffer files from Rolling Sky level.txt files. Supports rollers, lasers, stompers, and more." />
 <meta name="keywords" content="Rolling Sky, GeoBuffer, RS Editor, Rolling Sky level editor, geoBuffer generator, Rolling Sky tools, rolling sky geobuffer generator, rolling sky geobuffer" />
 <meta name="google-site-verification" content="F-8NQho_wn--hy6umNfzMSTMLaiUZEePvk7XiByaxiM" />
-<meta name="author" content="RibTruper" />
+<meta name="pagename" content="RS GeoBuffer Generator">
 <link rel="icon" href="../../favicon/favicon.png">
 <title>Rolling Sky GeoBuffer Generator (Tool)</title>
 <style>
@@ -391,6 +391,7 @@ togglePreviewBtn.addEventListener('click', () => {
 </script>
 </body>
 </html>
+
 
 
 
