--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 <meta name="pagename" content="RS GeoBuffer Generator">
 <link rel="icon" href="../../favicon/favicon.png">
 <title>Rolling Sky GeoBuffer Generator (Tool)</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Sen:wght@400;600;700&display=swap" rel="stylesheet">
 <style>
-  body{font-family:"Sen",sans-serif;background:#f3f4f6;padding:20px}
+body{font-family:'Sen',Inter,Arial,Helvetica,sans-serif;background:#f3f4f6;padding:20px}
   .container{max-width:980px;margin:18px auto;background:#fff;padding:18px;border-radius:8px;box-shadow:0 6px 18px rgba(0,0,0,0.06)}
   label{display:block;margin-top:12px;font-weight:600}
   input[type=text],input[type=number],select{padding:8px;border-radius:6px;border:1px solid #d1d5db;width:320px}
@@ -391,6 +394,7 @@ togglePreviewBtn.addEventListener('click', () => {
 </script>
 </body>
 </html>
+
 
 
 
